<resources>
    <string name="app_name">EzPz</string>
    <string name="error_message">An error has occurred. Please try again.</string>
    <string name="install_messenger">Please install Facebook Messenger</string>
    <string name="install_hangouts_dialer">Please install Hangouts Dialer</string>
    <string name="uri_messenger">https://m.me/</string>
    <string name="hangouts_dialer_package">com.google.android.apps.hangoutsdialer</string>
    <string name="viber_package">com.viber.voip</string>
    <string name="install_viber">Please install Viber</string>
    <string name="permission_required_read_contacts">Permission to read contacts is required for this app to run</string>
    <string name="permission_required_get_location">Permission to obtain location is required for this app feature</string>
    <string name="permission_required_send_location_via_sms">Both Location and Sending SMS permissions are required for this app feature</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">Pick a Contact</string>
    <string name="contact_photo">Contact Photo</string>
    <string name="call_phone_image_button">Call Phone image button</string>
    <string name="google_voice_image_button">Google Voice Image button</string>
    <string name="messenger_image_button">Messenger image button</string>
    <string name="viber_image_button">Viber image button</string>
    <string name="location_image_button">Location image button</string>
    <string name="sms_sent">SMS Sent!</string>
    <string name="sms_failed">SMS failed, please try again later!</string>
    <string name="no_contacts_to_show_msg">There are no contacts to show. \n
        Please make sure the contacts you want to appear here are STARRED / marked as Favorite in your Contacts</string>
    <string name="how_to_guide">How-To Guide</string>
    <string name="setup_steps">1. This app pulls starred contacts data from the Contacts app. So,
        first of all, have the contacts stored on this phone. The best way is to store your contacts
        on Google Contacts, use that Google Account on this phone, and auto-sync the contacts. \n
        2. In the contacts app or in Google Contacts Website, upload and store the contact\'s photo.
        It is must to have person\'s photo on the contacts for this app. Please make sure the image
        is cropped to cover just the headshot. \n
        3. Similarly, store the primary contact number under \'Mobile\' label.(Not \'Home\') \n
        4. Store the contact number for Google Voice under \'Google Voice\' label. \n
        5. Store the contact number for Viber, choose Custom label and create \'Viber\' label. \n
        6. Under IM section, add a label \'Facebook\' and store the facebook username of the contact
        person. \n
        7. Most importantly, mark those contacts you want to appear in this app as STARRED, which
        means to mark them as Favorites in your Contacts app or in Google Contacts website if you
        are using auto-sync. \n
        8. That\'s all.</string>
    <string name="how_to_setup_for_ezpz">How to setup for EzPz?</string>
    <string name="feature_notes">Feature Notes</string>
    <string name="feature_notes_info">1. Permission to read contacts should be granted. \n
        2. For the first time, when clicking Phone icon and Messenger icon, you might be asked which
        app to choose saying \'Complete action using\'. For Phone icon, select Phone app and click
        \'ALWAYS\'. For Messenger icon, select Facebook Messenger app and click \'ALWAYS\'.\n
        3. Long click the location icon to send the current location via SMS to the selected
        contact\'s \'Mobile\' number. The location should be turned on and permission to use
        location and sending SMS should be granted.</string>
</resources>
