<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_contact_photo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contact_photo"
        android:paddingStart="2dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingEnd="2dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_call_phone"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:padding="1dp"
        android:paddingStart="4dp"
        android:contentDescription="@string/call_phone_image_button"
        android:paddingTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/iv_contact_photo"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="4dp"
        app:srcCompat="@drawable/call_phone" />

    <ImageButton
        android:id="@+id/ib_google_voice"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:padding="1dp"
        android:contentDescription="@string/google_voice_image_button"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_contact_photo"
        app:layout_constraintTop_toBottomOf="@id/ib_call_phone"
        android:paddingEnd="4dp"
        app:srcCompat="@drawable/call_google_voice" />

    <ImageButton
        android:id="@+id/ib_messenger"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:padding="1dp"
        android:contentDescription="@string/messenger_image_button"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toRightOf="@id/ib_call_phone"
        app:layout_constraintStart_toEndOf="@+id/ib_call_phone"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="4dp"
        app:srcCompat="@drawable/facebook_messenger" />

    <ImageButton
        android:id="@+id/ib_viber"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:padding="1dp"
        android:contentDescription="@string/viber_image_button"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ib_google_voice"
        app:layout_constraintTop_toBottomOf="@+id/ib_messenger"
        android:paddingEnd="4dp"
        app:srcCompat="@drawable/call_viber" />

    <ImageButton
        android:id="@+id/ib_location"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:padding="1dp"
        android:paddingStart="4dp"
        android:contentDescription="@string/location_image_button"
        android:paddingTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/ib_messenger"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="4dp"
        app:srcCompat="@drawable/location" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        app:layout_constraintTop_toBottomOf="@id/iv_contact_photo" />
</android.support.constraint.ConstraintLayout>